demo-crm-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: demo-crm-ingress
    namespace: default
    annotations:
      kubernetes.io/ingress.class: "nginx"
  spec:
    tls:
    - hosts:
      - adam-democrm.myddns.me
      secretName: demo-crm-tls
    rules:
      - host: adam-democrm.myddns.me
        http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-crm-service
                port:
                  number: 3000
